[package]
name = "prose"
version = "0.1.0"
authors = ["hg.king <hgmaxwellking@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.15"
wasm-bindgen = "0.2.62"

[dependencies.nom]
version = "6.0.0-alpha"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "Node",
  "Window",
]
