[package]
name = "markdown-to-html"
version = "0.1.0"
authors = ["HG King <hgmaxwellking@gmail.com>"]
description = "Markdown parser that runs at hyper speeds!"
license = "MIT/Apache-2.0"
repository = "https://github.com/HGHimself/prose"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.62"

[dependencies.nom]
version = "6.0.0-alpha"
