[package]
name = "markdown-to-html"
version = "0.1.3"
authors = ["HG King <hgmaxwellking@gmail.com>"]
description = "Markdown parser that runs at hyper speeds!"
license = "MIT/Apache-2.0"
repository = "https://github.com/HGHimself/prose"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
